import { visionex } from './grpcweb/generated/grpc';
export var Language;
(function (Language) {
    Language[Language["LANGUAGE_EN_US"] = 1] = "LANGUAGE_EN_US";
    Language[Language["LANGUAGE_KO_KR"] = 2] = "LANGUAGE_KO_KR";
    Language[Language["LANGUAGE_JA_JP"] = 3] = "LANGUAGE_JA_JP";
})(Language || (Language = {}));
export var Model;
(function (Model) {
    Model[Model["MODEL_GPT4O"] = 1] = "MODEL_GPT4O";
    Model[Model["MODEL_GPT4O_MINI"] = 2] = "MODEL_GPT4O_MINI";
    Model[Model["MODEL_GEMINI_FLASH"] = 3] = "MODEL_GEMINI_FLASH";
})(Model || (Model = {}));
